--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  <div id="bar"><div><button onclick="syncToCloud()">sync</button></button></div></div>
+  <div id="bar"><div><button>sync</button></button></div></div>
   <main></main>
   <div id="add-button">
     <button onclick="navigateToNewNote()"><span>+</span></button>
   </div>
   <!-- Scripts -->
   <script src="scripts/token.js"></script>
-  <script src="scripts/index.js"></script>
   <script src="scripts/db.js"></script>
+  <script src="scripts/index.js"></script>
 </body>
 </html>
