--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <button onclick="navigateToNewNote()"><span>+</span></button>
   </div>
   <!-- Scripts -->
-  <script src="scripts/token.js"></script>
+  <!--<script src="scripts/token.js"></script>-->
   <script src="scripts/db.js"></script>
+  <script src="scripts/index_ui.js"></script>
   <script src="scripts/index.js"></script>
 </body>
 </html>
