manifest for gh pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>My Notes</title>
   <script>
     if(location.host==="stankay7bc.github.io") {
-      document.write('<link rel="manifest" href="/notepad/manifest.json">');
+      document.write('<link rel="manifest" href="/notepad/manifest_gh.json">');
     } else {
       document.write('<link rel="manifest" href="/manifest.json">');
     }
